fixed a style issue where images in the carousel where not centered

--- a/RealMax/RealMax/Content/css/searchStyleSheets/searchIndexStyleSheet.css
+++ b/RealMax/RealMax/Content/css/searchStyleSheets/searchIndexStyleSheet.css
@@ -23,6 +23,3 @@ a:hover{
     margin: 0 auto;
 }
 
-.carousel-inner > .item > img {
-    margin: 0 auto;
-}
